--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,13 +1,15 @@
-spring.application.name=twitter-clone-test
+spring.application.name=twitter-clone
 
-# MYSQL設定
-   spring.datasource.url=jdbc:h2:mem:twitterclone;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-   spring.datasource.driverClassName=org.h2.Driver
-   spring.datasource.username=sa
-   spring.datasource.password=
-   
+# MySQLデータベース接続設定
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/twitterclone?serverTimezone=Asia/Tokyo
+spring.datasource.username=root
+spring.datasource.password=sars6388
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # JPA設定
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# ログレベル設定
+logging.level.root=INFO
