--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.0.31</version> <!-- 互換性のためにバージョンを維持 -->
+			<version>8.0.33</version> <!-- 最新の安定バージョンに更新 -->
 		</dependency>
 		
 		<!-- H2 Database for Testing -->
