フォロー機能実装

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # ログレベル設定
 logging.level.root=INFO
+
+# JWT設定
+app.jwt.secret-key=your_secret_key
+app.jwt.expiration-milliseconds=3600000
